Fixed a bug with header displaying incorrectly on small screens

--- a/styles/global/main.css
+++ b/styles/global/main.css
@@ -689,6 +689,7 @@ body {
   .main__trendcards {
     justify-content: center;
     flex-wrap: wrap;
+    margin-left: 0;
   }
 
   .trendcards__trend {
